--- a/packages/compiler-cli/src/ngtsc/typecheck/extended/BUILD.bazel
+++ b/packages/compiler-cli/src/ngtsc/typecheck/extended/BUILD.bazel
@@ -5,7 +5,10 @@ ts_library(
     srcs = glob(
         ["**/*.ts"],
     ),
-    visibility = ["//packages/compiler-cli/src/ngtsc:__subpackages__"],
+    visibility = [
+        "//packages/compiler-cli/src/ngtsc:__subpackages__",
+        "//packages/language-service:__subpackages__",
+    ],
     deps = [
         "//packages/compiler-cli/src/ngtsc/diagnostics",
         "//packages/compiler-cli/src/ngtsc/typecheck/api",
